UPDATED README.md 11/18/2025

--- a/env.example
+++ b/env.example
@@ -1,21 +1,24 @@
-# API Configuration
-API_BASE_URL=http://localhost:8000 (or use a remote api url)
-API_TIMEOUT=30
+# Django Settings
+SECRET_KEY=your-secret-key-here-change-in-production
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database Configuration (for seeded data tests)
-# If you have direct database access for seeding test data
+# Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=test_db
-DB_USER=test_user
-DB_PASSWORD=test_password
+DB_NAME=extraction_db
+DB_USER=postgres
+DB_PASSWORD=postgres
+
+# API Configuration (for tests)
+API_BASE_URL=http://localhost:8000
+API_TIMEOUT=30
 
 # Service Provided API Token (for real extraction tests)
 # This should be a valid token for the third-party service
-SERVICE_PROVIDED_API_TOKEN=your_token_here (real token in .env)
+SERVICE_PROVIDED_API_TOKEN=your_token_here
 
 # Test Configuration
 POLL_INTERVAL_SECONDS=5
 MAX_POLL_ATTEMPTS=120
 TEST_DATA_CLEANUP=true
-
